- Any exceptions or errors (ERROR or SEVERE) in the log. Warnings might be interesting, but probably not urgent
----------------------------------------------------------------

VERSIONS

Version 7.3.105 (10.09.2023)
- ADDED: First new planetary images (Lothan)
- ADDED: Planet surface button (if planet has surface maps)
- CHANGED: Layout of diplomacy pane

- Precache videos (Invasion)
- If an invasion is started, Ulric announces that the attack is broken although it is not (C3GameSessionHandler, L.713)
- If I am Allied and break up, save, and then ally again, this will not be saved


Version 7.3.104 (08.09.2023)
- CHANGED: If an alliance is broken up, this will activate in the next round

Version 7.3.102 (04.09.2023)
- FIXED: Already allied factions will be stored correctly on a status change

Version 7.3.101 (03.09.2023)
- UPDATED: Dependencies
- FIXED: Multiple Jumpships on a system are visible now
- FIXED: Unit button now selects and centers my own jumpship
- FIXED: Label color of CNC matches the ship icon now
- FIXED: Alliances are correctly listed
- CHANGED: Own jumpship is always on the top of the pile
- CHANGED: Diplomacy states will get into effect in the next round (not immediatly)

Version 7.3.99 (26.08.2023)
- UPDATED: Dependencies
- FIXED: Server error while sending mail

Version 7.3.98 (11.08.2023)
- UPDATED: Window resize behaviour
- UPDATED: New gui level for border shadow
- UPDATED: Noise image resize behaviour
- UPDATED: Dependencies
- ADDED: Buttons to maximize and minimize the window (not working yet)

Version 7.3.97 (05.08.2023)
- UPDATED: Dependencies
- UPDATED: NSIS version
- UPDATED: Stored missing columns for a new char (MWO user name will be initialized to the username)
- FIXED: Error while sending lobby information to the discord bot
- FIXED: Display bug showing too many alliances in the map pane
- CHANGED: Logging format
- REMOVED: Unused columns in char table<