@@ -58,6 +58,7 @@ Version 7.3.105 (10.09.2023)
 - ADDED: First new planetary images (Lothan)
 - ADDED: Planet surface button (if planet has surface maps)
 - CHANGED: Layout of diplomacy pane
+- CHANGED: Space char in IRC nick to "_"
 
 - Precache videos (Invasion)
 - If an invasion is started, Ulric announces that the attack is broken although it is not (C3GameSessionHandler, L.713)
